2008-07-27  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/strsctp.texi: no invariant sections for debian
	* m4/.cvsignore: more libtool files to ignore

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: updates for 2.6.18-92.1.6.el5 kernel
	* src/drivers/sctp2.c: updates for 2.6.18-92.1.6.el5 kernel
	* doc/man/strsctp.refs: update references

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strsctp.refs: update references

2008-05-05  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/sctp2.c: be strict with MORE_flag
	* src/drivers/sctp_t.c: be strict with MORE_flag

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: updates for release
	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* strsctp.lsm.in: updates for release
	* strsctp.spec.in: updates for release
	* debian/changelog: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/strsctp-core.postinst.in: updates for release
	* debian/strsctp-core.postrm.in: updates for release
	* debian/strsctp-core.preinst.in: updates for release
	* debian/strsctp-core.prerm.in: updates for release
	* debian/strsctp-init.postinst.in: updates for release
	* debian/strsctp-init.preinst.in: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* doc/manual/prerequisites.texi: added strx25 sub-package

2008-04-28  Brian Bidulock  <bidulock@openss7.org>

	* strsctp.spec.in: updates for release
	* doc/man/strsctp.refs: updates for release
