@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: sctp_hooks.h.in,v 0.9.2.11 2007/08/14 06:22:22 brian Exp $
+ @(#) $Id: sctp_hooks.h.in,v 0.9.2.12 2008-08-02 07:26:44 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/08/14 06:22:22 $ by $Author: brian $
+ Last Modified $Date: 2008-08-02 07:26:44 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: sctp_hooks.h.in,v $
+ Revision 0.9.2.12  2008-08-02 07:26:44  brian
+ - recent Fedora kernel does not export secure_tcp_sequence_number
+
  Revision 0.9.2.11  2007/08/14 06:22:22  brian
  - GPLv3 header update
 
@@ -58,7 +61,7 @@
 #ifndef __LOCAL_SCTP_HOOKS_H__
 #define __LOCAL_SCTP_HOOKS_H__
 
-#ident "@(#) $RCSfile: sctp_hooks.h.in,v $ $Name:  $($Revision: 0.9.2.11 $) Copyright (c) 2001-2004 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: sctp_hooks.h.in,v $ $Name:  $($Revision: 0.9.2.12 $) Copyright (c) 2001-2004 OpenSS7 Corporation."
 
 /* This symbol should be defined by newer kernels, however, since the protocol
    value is always 132, we double check the definition for those kernels that
@@ -401,6 +404,17 @@ extern struct proto raw_prot;
 
 #ifdef HAVE_RAW_PROT_ADDR
 #define raw_prot (*((typeof(raw_prot) *)HAVE_RAW_PROT_ADDR))
+#endif
+
+#undef HAVE_SECURE_TCP_SEQUENCE_NUMBER_ADDR
+#ifdef HAVE_SECURE_TCP_SEQUENCE_NUMBER_ADDR
+__u32
+secure_tcp_sequence_number(__u32 saddr, __u32 daddr, __u16 sport, __u16 dport)
+{
+	__u32 (*func)(__u32 saddr, __u32 daddr, __u16 sport, __u16 dport)
+		= (typeof(func)) HAVE_SECURE_TCP_SEQUENCE_NUMBER_ADDR;
+	return (*func)(saddr, daddr, sport, dport);
+}
 #endif
 
 #endif				/* __LOCAL_SCTP_HOOKS_H__ */
